[tool.poetry]
name = "hass-day-state"
version = "0.0.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hass_day_state"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
